fixed navbar on mobile and desktop

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -391,9 +391,13 @@ section {
 }
 
 #page-title {
-	margin: 10px auto 20px;
+	padding: 10px 20px;
 	color: @mocha;
 	text-transform: capitalize;
+	position: relative;
+	z-index: 999;
+	background-color: white;
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
 .divider {
