--- a/client/templates/navbar/navbar.less
+++ b/client/templates/navbar/navbar.less
@@ -30,6 +30,7 @@
 	background: @offwhite;
 	font-size: 14px;
 	overflow: auto;
+	z-index: 999;
 	a {
 		display: inline-block;
 		width: 100%;
@@ -96,6 +97,7 @@
 		background: white;
 		overflow: visible;
 		box-shadow: 0 1px 10px 5px #ddd;
+		z-index: 999;
 		ul {
 			float: right;
 			width: 90%;
